Revert "trying to fix the wrapping issue"
This reverts commit cbaa1f88cc2164de9b685fa3d58adf380fec4c40.

--- a/static/login.css
+++ b/static/login.css
@@ -116,6 +116,7 @@ button {
 
 	border: 1px;
 	border-style: solid;
+
 }
 
 #inputbox {
@@ -125,6 +126,7 @@ button {
 
 	border: 1px;
 	border-style: solid;
+	border-color: blue;
 
 }
 
@@ -133,6 +135,7 @@ button {
 
 	border: 1px;
 	border-style: solid;
+	border-color: green;
 }
 
 
